# rust

./: .gitmodules  notes.md
cli-gcd/: Cargo.toml
cli-gcd/src/: main.rs
gcd-cli/: Cargo.toml
gcd-web/: Cargo.toml
http/: Cargo.toml
http-surf/: Cargo.toml
http/src/: main.rs
macros/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
quickreplace/src/: main.rs
traits/: Cargo.toml
traits/src/: input.html  main.rs
web-async/src/: main.rs
web-chat/: Cargo.toml  test_performance.md
web-chat/src/: lib.rs  utils.rs
web-gcd/: Cargo.toml
web-gcd/src/: main.rs
web-request/: Cargo.toml
web-request/src/: main.rs
web-surf/src/: main.rs
