[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.26"
nom = "7.1.3"
rustls = "0.20.8"
rustls-native-certs = "0.6.2"
tokio = { version = "1.25.0", features = ["full"] }
tokio-rustls = "0.23.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
